Bug 271528 - Konquerer Crash Logging Into Synology Disk Manager 3.1
Summary: Konquerer Crash Logging Into Synology Disk Manager 3.1
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.8.2
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords: testcase
: 274158 274400 278517 280912 287448 295890 297025 320141 320494 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-23 05:01 UTC by Bill Wayson
Modified: 2013-05-30 17:54 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.70 KB, text/plain)
2011-04-23 22:16 UTC, Bill Wayson
Details
New crash information added by DrKonqi (5.63 KB, text/plain)
2011-11-17 19:35 UTC, Andrei Slavoiu
Details
New crash information added by DrKonqi (5.63 KB, text/plain)
2011-11-17 19:35 UTC, Andrei Slavoiu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bill Wayson 2011-04-23 05:01:54 UTC
Application: konqueror (4.6.00 (4.6.0) "release 6")
KDE Platform Version: 4.6.00 (4.6.0) "release 6"
Qt Version: 4.7.1
Operating System: Linux 2.6.37.1-1.2-default i686
Distribution: "openSUSE 11.4 (i586)"

-- Information about the crash:
- What I was doing when the application crashed:

I had just pressed the <Enter> key after typing in my user name and password to log into the Synology Disk Station Manager 3.1 web interface for their NAS, the DS 411slim.

The crash can be reproduced every time.

-- Backtrace:
Application: Konqueror (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#7  0xaf961664 in operator KHTMLPart* (this=0x0) at /usr/include/QtCore/qpointer.h:78
#8  KHTMLPart::opener (this=0x0) at /usr/src/debug/kdelibs-4.6.0/khtml/khtml_part.cpp:6921
#9  0xaf9616fa in KHTMLPartPrivate::canNavigate (this=0x834bf00, bCand=0x0) at /usr/src/debug/kdelibs-4.6.0/khtml/khtml_part.cpp:5241
#10 0xaf97c5ac in KHTMLPartPrivate::findFrameParent (this=0x834bf00, callingPart=0x85c7438, f=..., childFrame=0x0, checkForNavigation=true) at /usr/src/debug/kdelibs-4.6.0/khtml/khtml_part.cpp:5196
#11 0xaf9ab361 in KHTMLPartBrowserHostExtension::findFrameParent (this=0x85a7790, callingPart=0x85c7438, frame=...) at /usr/src/debug/kdelibs-4.6.0/khtml/khtml_ext.cpp:995
#12 0xb25db2d7 in KonqMainWindow::childView (this=0x8162600, callingPart=0x85c7438, name=..., hostExtension=@0xbfb81b84, part=0x0) at /usr/src/debug/kdebase-4.6.0/apps/konqueror/src/konqmainwindow.cpp:2132
#13 0xb25f01b0 in KonqMainWindow::slotOpenURLRequest (this=0x8162600, url=..., args=..., browserArgs=...) at /usr/src/debug/kdebase-4.6.0/apps/konqueror/src/konqmainwindow.cpp:987
#14 0xb25f5b86 in KonqMainWindow::qt_metacall (this=0x8162600, _c=QMetaObject::InvokeMetaMethod, _id=12, _a=0xbfb81d20) at /usr/src/debug/kdebase-4.6.0/build/apps/konqueror/src/konqmainwindow.moc:348
#15 0xb6f538cd in QMetaObject::metacall (object=0x8162600, cl=QMetaObject::InvokeMetaMethod, idx=62, argv=0xbfb81d20) at kernel/qmetaobject.cpp:237
#16 0xb6f63a2c in QMetaObject::activate (sender=0x85a6290, m=0xb4f9a460, local_signal_index=5, argv=0xbfb81d20) at kernel/qobject.cpp:3272
#17 0xb4f71c25 in KParts::BrowserExtension::openUrlRequestDelayed (this=0x85a6290, _t1=..., _t2=..., _t3=...) at /usr/src/debug/kdelibs-4.6.0/build/kparts/browserextension.moc:293
#18 0xb4f858ad in KParts::BrowserExtension::slotEmitOpenUrlRequestDelayed (this=0x85a6290) at /usr/src/debug/kdelibs-4.6.0/kparts/browserextension.cpp:668
#19 0xb4f85d69 in KParts::BrowserExtension::qt_metacall (this=0x85a6290, _c=QMetaObject::InvokeMetaMethod, _id=42, _a=0x9555940) at /usr/src/debug/kdelibs-4.6.0/build/kparts/browserextension.moc:231
#20 0xaf9ad562 in KHTMLPartBrowserExtension::qt_metacall (this=0x85a6290, _c=QMetaObject::InvokeMetaMethod, _id=46, _a=0x9555940) at /usr/src/debug/kdelibs-4.6.0/build/khtml/khtml_ext.moc:91
#21 0xb6f538cd in QMetaObject::metacall (object=0x85a6290, cl=QMetaObject::InvokeMetaMethod, idx=46, argv=0x9555940) at kernel/qmetaobject.cpp:237
#22 0xb6f5e3a5 in QMetaCallEvent::placeMetaCall (this=0x9718a40, object=0x85a6290) at kernel/qobject.cpp:534
#23 0xb6f625af in QObject::event (this=0x85a6290, e=0x9718a40) at kernel/qobject.cpp:1211
#24 0xb6459414 in QApplicationPrivate::notify_helper (this=0x80c8790, receiver=0x85a6290, e=0x9718a40) at kernel/qapplication.cpp:4445
#25 0xb64620c7 in QApplication::notify (this=0xbfb82960, receiver=0x85a6290, e=0x9718a40) at kernel/qapplication.cpp:3845
#26 0xb75a71f1 in KApplication::notify (this=0xbfb82960, receiver=0x85a6290, event=0x9718a40) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#27 0xb6f4cfde in QCoreApplication::notifyInternal (this=0xbfb82960, receiver=0x85a6290, event=0x9718a40) at kernel/qcoreapplication.cpp:732
#28 0xb6f50d6c in sendEvent (receiver=0x0, event_type=0, data=0x80582a0) at kernel/qcoreapplication.h:215
#29 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x80582a0) at kernel/qcoreapplication.cpp:1373
#30 0xb6f50ebc in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#31 0xb6f7b5e4 in sendPostedEvents (s=0x80c9fb0) at kernel/qcoreapplication.h:220
#32 postEventSourceDispatch (s=0x80c9fb0) at kernel/qeventdispatcher_glib.cpp:277
#33 0xb5bfc509 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#34 0xb5bfcd10 in ?? () from /lib/libglib-2.0.so.0
#35 0xb5bfcfce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#36 0xb6f7b76b in QEventDispatcherGlib::processEvents (this=0x80abc30, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#37 0xb650f55a in QGuiEventDispatcherGlib::processEvents (this=0x80abc30, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0xb6f4c2bd in QEventLoop::processEvents (this=0xbfb82794, flags=...) at kernel/qeventloop.cpp:149
#39 0xb6f4c4e9 in QEventLoop::exec (this=0xbfb82794, flags=...) at kernel/qeventloop.cpp:201
#40 0xb6f50f90 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#41 0xb6457104 in QApplication::exec () at kernel/qapplication.cpp:3719
#42 0xb261734f in kdemain (argc=2, argv=0x80a4e38) at /usr/src/debug/kdebase-4.6.0/apps/konqueror/src/konqmain.cpp:219
#43 0x0804e531 in _start ()

Reported using DrKonqi
Comment 1 Bill Wayson 2011-04-23 22:16:10 UTC
Created attachment 59258 [details]
New crash information added by DrKonqi

konqueror (4.6.00 (4.6.0) "release 6") on KDE Platform 4.6.00 (4.6.0) "release 6" using Qt 4.7.1

- What I was doing when the application crashed:

I had just pressed the <Enter> key after entering a user name and password in Konqueror to log into the Synology Disk Station Manager 3.1 web application for administering my NAS, a Synology DS 411slim.  This attempt was from a different computer the one I used in my original report.  Like the other one, this PC is running openSUSE 11.4.

Additional info:  Attempting this login to the same hardware from openSUSE 11.3 running on the same dual-booting PC as the one generating the original report was successful.  The crash appears to happen between the time the <Enter> key is pressed and Konqueror asks if I want it to save the login credentials.  The crashing PCs never reach that question from Konqueror.

-- Backtrace (Reduced):
#7  0xaf86b664 in operator KHTMLPart* (this=0x0) at /usr/include/QtCore/qpointer.h:78
#8  KHTMLPart::opener (this=0x0) at /usr/src/debug/kdelibs-4.6.0/khtml/khtml_part.cpp:6921
#9  0xaf86b6fa in KHTMLPartPrivate::canNavigate (this=0x8560c00, bCand=0x0) at /usr/src/debug/kdelibs-4.6.0/khtml/khtml_part.cpp:5241
#10 0xaf8865ac in KHTMLPartPrivate::findFrameParent (this=0x8560c00, callingPart=0x8402bd8, f=..., childFrame=0x0, checkForNavigation=true) at /usr/src/debug/kdelibs-4.6.0/khtml/khtml_part.cpp:5196
#11 0xaf8b5361 in KHTMLPartBrowserHostExtension::findFrameParent (this=0x85681f0, callingPart=0x8402bd8, frame=...) at /usr/src/debug/kdelibs-4.6.0/khtml/khtml_ext.cpp:995
Comment 2 Andrei Slavoiu 2011-11-17 19:35:26 UTC
Created attachment 65791 [details]
New crash information added by DrKonqi

konqueror (4.7.3 (4.7.3)) on KDE Platform 4.7.3 (4.7.3) using Qt 4.7.4

I was finalizing an online payment using secure.epayment.ro

-- Backtrace (Reduced):
#6  operator KHTMLPart* (this=) at /usr/include/qt4/QtCore/qpointer.h:78
#7  KHTMLPart::opener (this=0x0) at /var/tmp/portage/kde-base/kdelibs-4.7.3/work/kdelibs-4.7.3/khtml/khtml_part.cpp:6922
#8  0x0000003202606bda in KHTMLPartPrivate::canNavigate (this=0x21b7430, bCand=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.7.3/work/kdelibs-4.7.3/khtml/khtml_part.cpp:5242
#9  0x000000320261a898 in KHTMLPartPrivate::findFrameParent (this=0x21b7430, callingPart=0x2151030, f=..., childFrame=0x0, checkForNavigation=true) at /var/tmp/portage/kde-base/kdelibs-4.7.3/work/kdelibs-4.7.3/khtml/khtml_part.cpp:5197
#10 0x000000320264a239 in KHTMLPartBrowserHostExtension::findFrameParent (this=<optimized out>, callingPart=<optimized out>, frame=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.7.3/work/kdelibs-4.7.3/khtml/khtml_ext.cpp:995
Comment 3 Andrei Slavoiu 2011-11-17 19:35:26 UTC
Created attachment 65792 [details]
New crash information added by DrKonqi

konqueror (4.7.3 (4.7.3)) on KDE Platform 4.7.3 (4.7.3) using Qt 4.7.4

I was finalizing an online payment using secure.epayment.ro

-- Backtrace (Reduced):
#6  operator KHTMLPart* (this=) at /usr/include/qt4/QtCore/qpointer.h:78
#7  KHTMLPart::opener (this=0x0) at /var/tmp/portage/kde-base/kdelibs-4.7.3/work/kdelibs-4.7.3/khtml/khtml_part.cpp:6922
#8  0x0000003202606bda in KHTMLPartPrivate::canNavigate (this=0x21b7430, bCand=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.7.3/work/kdelibs-4.7.3/khtml/khtml_part.cpp:5242
#9  0x000000320261a898 in KHTMLPartPrivate::findFrameParent (this=0x21b7430, callingPart=0x2151030, f=..., childFrame=0x0, checkForNavigation=true) at /var/tmp/portage/kde-base/kdelibs-4.7.3/work/kdelibs-4.7.3/khtml/khtml_part.cpp:5197
#10 0x000000320264a239 in KHTMLPartBrowserHostExtension::findFrameParent (this=<optimized out>, callingPart=<optimized out>, frame=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.7.3/work/kdelibs-4.7.3/khtml/khtml_ext.cpp:995
Comment 4 Dawit Alemayehu 2011-11-21 19:33:35 UTC
*** Bug 280912 has been marked as a duplicate of this bug. ***
Comment 5 Dawit Alemayehu 2011-11-21 23:29:50 UTC
*** Bug 278517 has been marked as a duplicate of this bug. ***
Comment 6 Dawit Alemayehu 2011-11-21 23:30:09 UTC
*** Bug 274400 has been marked as a duplicate of this bug. ***
Comment 7 Tommi Tervo 2011-11-27 14:39:33 UTC
*** Bug 287448 has been marked as a duplicate of this bug. ***
Comment 8 Jekyll Wu 2012-03-29 11:10:07 UTC
*** Bug 274158 has been marked as a duplicate of this bug. ***
Comment 9 Jekyll Wu 2012-03-29 11:10:21 UTC
*** Bug 297025 has been marked as a duplicate of this bug. ***
Comment 10 Dawit Alemayehu 2012-04-16 06:54:54 UTC
*** Bug 295890 has been marked as a duplicate of this bug. ***
Comment 11 Andrea Iacovitti 2012-04-16 19:33:07 UTC
Online demo page to reproduce this bug:
http://demo.synology.com:5000/webman/index.cgi
Just click the login arrow.
Comment 12 David Faure 2012-10-19 09:54:13 UTC
Git commit 65464349951e0df9b5d80c2eb3cc7458d54923ae by David Faure.
Committed on 19/10/2012 at 11:33.
Pushed by dfaure into branch 'KDE/4.9'.

Fix crash when trying to reuse a frame with a null part.
FIXED-IN: 4.9.3

M  +5    -1    khtml/khtml_part.cpp

http://commits.kde.org/kdelibs/65464349951e0df9b5d80c2eb3cc7458d54923ae
Comment 13 Andrea Iacovitti 2013-05-30 17:50:51 UTC
*** Bug 320494 has been marked as a duplicate of this bug. ***
Comment 14 Andrea Iacovitti 2013-05-30 17:54:40 UTC
*** Bug 320141 has been marked as a duplicate of this bug. ***