Fix crash when trying to reuse a frame with a null part.

BUG: 271528
FIXED-IN: 4.9.3